--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,19 @@ ol {
 	color: #fff;
 }
 
+
+.strokeme
+{
+    color: white;
+    text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;  
+}
+
+
+
 /*---------------------
   Commom elements
 -----------------------*/
