--- a/css/style.css
+++ b/css/style.css
@@ -566,7 +566,7 @@ ol {
 .main-menu li a {
 	display: inline-block;
 	font-size: 16px;
-	color: #fff;
+	color: black;
 	margin-left: 50px;
 	-webkit-transition: all 0.4s;
 	-o-transition: all 0.4s;
