--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ ol {
 	min-width: 186px;
 	padding: 17px 25px;
 	border-radius: 14px;
-	background: #eb2b63;
+	background: #b72626;
 	color: #fff;
 	line-height: 1;
 	cursor: pointer;
@@ -507,10 +507,10 @@ ol {
 	display: -webkit-inline-box;
 	display: -ms-inline-flexbox;
 	display: inline-flex;
-	width: 32px;
-	height: 32px;
+	width: 200px;
+	height: 38px;
 	color: #fff;
-	background: #491f70;
+	background: #1e1e20;
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
@@ -526,7 +526,7 @@ ol {
 }
 
 .social a:hover {
-	background: #eb2b63;
+	background: #5b6063;
 }
 
 /*------------------
@@ -538,7 +538,7 @@ ol {
 	width: 100%;
 	padding-top: 25px;
 	z-index: 99;
-	background-color: red;
+	background-color:#722525;
 }
 
 .site-logo {
@@ -580,7 +580,7 @@ ol {
 
 .user-panel {
 	float: right;
-	background: #eb2b63;
+	background: #72252f;
 	color: #fff;
 	margin-left: 30px;
 	margin-right: 70px;
@@ -997,7 +997,7 @@ ol {
 }
 
 .footer-top-section {
-	background: #200545;
+	background: #b72626;
 }
 
 .footer-widget .fw-title {
@@ -1064,8 +1064,8 @@ ol {
 
 .fw-latest-post-widget .lp-content span,
 .sb-latest-post-widget .lp-content span {
-	font-size: 12px;
-	color: #eb2b63;
+	font-size: 18px;
+	color: #000000;
 }
 
 /*--------------------
@@ -1136,7 +1136,7 @@ ol {
 }
 
 .about-text {
-	padding-top: 70px;
+	padding-top: 100px;
 }
 
 .about-text h3 {
@@ -1195,22 +1195,22 @@ ol {
 	background: #0a0228;
 	/* Old browsers */
 	/* FF3.6-15 */
-	background: -webkit-linear-gradient(top, #0a0228 0%, #2e1779 100%);
+	background: -webkit-linear-gradient(top, #ffffff 0%, #ffffff 100%);
 	/* Chrome10-25,Safari5.1-6 */
-	background: -webkit-gradient(linear, left top, left bottom, from(#0a0228), to(#2e1779));
-	background: -o-linear-gradient(top, #0a0228 0%, #2e1779 100%);
-	background: linear-gradient(to bottom, #0a0228 0%, #2e1779 100%);
+	background: -webkit-gradient(linear, left top, left bottom, from(#7b0707), to(#ffffff));
+	background: -o-linear-gradient(top, #ffffff 0%, #ffffff 100%);
+	background: #5b6063;
 	/* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0a0228', endColorstr='#2e1779', GradientType=0);
 	/* IE6-9 */
 }
 
 .service-box:nth-child(2) {
-	background: #2d1678;
+	background: #5b6063;
 }
 
 .service-box:nth-child(3) {
-	background: #422b8f;
+	background: #5b6063;
 }
 
 .service-box-text {
@@ -1497,7 +1497,7 @@ ol {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
 	.user-panel {
 		margin-left: 30px;
-		margin-right: 20px;
+		margin-right: 40px;
 	}
 	.site-logo {
 		margin-left: 20px;
@@ -1655,7 +1655,7 @@ ol {
 		margin-left: 20px;
 	}
 	.service-box:nth-child(1) {
-		background: #210f5a;
+		background: #ffffff;
 	}
 	.service-box-image {
 		padding: 100px 30px 50px;
